<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/medical_history_label_tv_f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medical_history_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/medical_history_et_f1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/medicine_tv_f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/medicine_et_f1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    

    <TextView
        android:id="@+id/dose_label_tv_f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dose_et_f1"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
		
        <RadioGroup
        	android:id="@+id/radioGroup"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
	        <RadioButton
	            android:id="@+id/mg_rb_f1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:checked="true"
	            android:text="@string/mg_label" />

	        <RadioButton
	            android:id="@+id/ml_rb_f1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/ml_label" />
        
        </RadioGroup>

    </LinearLayout>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/hour_dose_tv_f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_dose_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/hours_et_f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/hours_label_tv_f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hours_label" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Spinner
        android:id="@+id/administration_route_s_f1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/administration_route"
        android:prompt="@string/administration_route_label"
        android:spinnerMode="dropdown" />

	<TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/next_b_f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_label"
        android:layout_gravity="center_horizontal"
        android:background="@color/blue_light" />

</LinearLayout>
