<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/medical_history_label_tv_mv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/medical_history_label"
        android:focusable="false" />
    
    <TextView
        android:id="@+id/measurement_date_label_tv_mv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/medical_history_label_tv_mv"
        android:text="@string/measurement_date_label"
        android:focusable="false" />
    
    <TextView
        android:id="@+id/sent_tv_mv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/measurement_date_label_tv_mv"
        android:text="@string/sent_label"
        android:focusable="false" />

    <CheckBox
        android:id="@+id/sent_cb_mv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sent_tv_mv"
        android:layout_toRightOf="@+id/sent_tv_mv"
        android:checked="false"
        android:clickable="false"
        android:focusable="false" />

    <TextView
        android:id="@+id/measurement_date_tv_mv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sent_tv_mv"
        android:layout_toRightOf="@+id/measurement_date_label_tv_mv"
        android:focusable="false" />

    <TextView
        android:id="@+id/medical_history_tv_mv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/measurement_date_tv_mv"
        android:layout_toRightOf="@+id/medical_history_label_tv_mv"
        android:focusable="false" />

</RelativeLayout>
